--- a/desafios/desafio010_siteCompleto/style/style.css
+++ b/desafios/desafio010_siteCompleto/style/style.css
@@ -182,12 +182,15 @@ footer {
 }
 
 footer a {
-    color: white;
     text-decoration: none;
     font-weight: bolder;
+    text-decoration: underline;
+}
+
+footer a:visited {
+    color: rgb(0, 0, 238);
 }
 
 footer a:hover {
     color: var(--cor1);
-    text-decoration: underline;
 }
