--- a/desafios/desafio012_cordelModerno/estilo/style.css
+++ b/desafios/desafio012_cordelModerno/estilo/style.css
@@ -1,13 +1,26 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&play=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif; /* Default font  */
+    --font2: "Passion One", cursive; /* Used in titles         */
+    --font3: "Sriracha", cursive; /* Used in content       */
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header {
@@ -19,6 +32,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -39,6 +54,8 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 5vh;
+    font-family: var(--font3);
+    font-size: 2.6vw;
 }
 
 section.normal {
@@ -51,7 +68,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 300px;
+    display: inline-block;
+    padding: 6px;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
